# Local-Agentic-RAG

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  main.py  pyproject.toml
.github/workflows/: ci.yml
data/: sources.json
data/chroma/2009666c-7672-4adc-9de5-e0f4a317969d/: index_metadata.pickle
data/processed/: technical_ingestion_report.json
data/raw/: collection_report.json
data/raw/pytorch/: pytorch_basics.md  pytorch_basics.metadata.json
data/raw/reinforcement_learning/: gymnasium_docs.md  gymnasium_docs.metadata.json  pytorch_dqn.md  pytorch_dqn.metadata.json  torchrl_docs.md  torchrl_docs.metadata.json
docs/: agentic-core.md  architecture.md  evaluation.md  evaluation_results.json  rag-pipeline.md  roadmap.md  security-model.md  tests.md  threat-model.md
docs/assets/: README_ASSET_SPEC.md
scripts/: populate_cybersecurity_corpus.py  validate_repository.py
src/: agent_router.py  agent_router.pyx
src/agent/core/: model.py
src/agent/policies/: paths.py
src/agent/schemas/: tool_call.py
src/agent/tools/: filesystem.py  git.py  registry.py
src/corpus/: collect.py
src/rag/: chat.py  chat_technical.py  ingest.py  ingest_technical.py
src/rag/agent/: __init__.py  evaluate.py  policy.py  router.py  sources.py  tools.py
tests/: test_agent_model.py  test_agent_tool_call_schema.py  test_agent_tools.py  test_research_agent_routing.py  test_router_policy.py
tools/: populate_ai_batch4.py  populate_ops_batch5.py  populate_python_batch2.py  populate_python_batch3.py
(+80 files in other folders)
