[project]
name = "local-agentic-rag"
version = "0.1.0"
description = "Secure local RAG and agentic AI engineering system powered by Qwen, Ollama, EmbeddingGemma and ChromaDB."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.14.0",
    "beautifulsoup4>=4.15.0",
    "bitsandbytes>=0.49.2",
    "chromadb>=1.5.9",
    "datasets>=5.0.0",
    "lxml>=6.1.1",
    "peft>=0.19.1",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "torch>=2.12.1",
    "transformers>=5.12.1",
    "trl>=1.6.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.19",
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
]

[tool.ruff]
line-length = 88
target-version = "py311"
